BUG: changed padding width of containers to 3vw instead of 3vh to create even spacing

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h5 {
 
 .container-fluid {
     background-color: #e6eeea;
-    padding: 3vh 3vh;
+    padding: 3vh 3vw;
 }
 
 /* The following fixed sidebar information has been adapted from W3Schools SRC: https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
